# movie

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
api/: admin.py  ai_input.py  models.py  serializers.py  urls.py  views.py
movie/: settings.py  urls.py
web/: Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml
web/src/app/: layout.tsx  page.tsx
web/src/components/Header/: Header.module.css  index.tsx
web/src/components/Layouts/: index.tsx
web/src/components/RichTextEditor/: index.tsx
web/src/pages/: _app.tsx  _document.tsx  favorites.tsx  index.tsx  log-in.tsx  movies.tsx  sign-up.tsx  watchlist.tsx
web/src/pages/movie/: [id].tsx
web/src/pages/movies/: [id].tsx
web/src/types/: index.ts
web/src/utils/: index.ts
