[tool.poetry]
name = "movie"
version = "0.1.0"
description = ""
authors = ["AnOrdinaryUsername <57053268+AnOrdinaryUsername@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
djangorestframework = "^3.15.2"
psycopg = "^3.2.3"
djoser = "^2.2.3"
django-cors-headers = "^4.6.0"
nh3 = "^0.2.19"
mistralai = "^1.2.5"

[tool.poetry.group.dev.dependencies]
drf-yasg = "^1.21.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
